--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.1",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0-alpha",
     "compression": "^1.6.2",
+    "dotenv": "^6.1.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.17",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
